--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
-    "mongodb": "^6.16.0",
     "next": "15.3.2",
-    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -22,11 +20,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^20.17.52",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "mongodb": "^6.16.0",
+    "next-auth": "^4.24.11",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
