--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tremor/react": "^3.14.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/date-fns": "^2.6.3",
     "@types/nodemailer": "^6.4.17",
+    "@types/recharts": "^2.0.1",
     "bcrypt": "^6.0.0",
+    "date-fns": "^3.3.1",
     "next": "15.3.2",
     "nodemailer": "^6.10.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
