--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@tremor/react": "^3.14.1",
     "@types/bcrypt": "^5.0.2",
     "@types/date-fns": "^2.6.3",
@@ -16,17 +17,23 @@
     "@types/recharts": "^2.0.1",
     "bcrypt": "^6.0.0",
     "date-fns": "^3.3.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "15.3.2",
     "nodemailer": "^6.10.1",
+    "puppeteer": "^24.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.3"
+    "react-pdf": "^9.2.1",
+    "recharts": "^2.15.3",
+    "simple-statistics": "^7.8.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/html2canvas": "^1.0.0",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.17.52",
     "@types/react": "^19.1.6",
